--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>𝕮𝖍𝖗𝖔𝖒𝖆𝖙𝖎𝖈𝖆💓⚔️</title>
   <link rel="stylesheet" href="css/estilos.css">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500&family=Source+Code+Pro&display=swap" rel="stylesheet"
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500&family=Source+Code+Pro&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/17f177768e.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
     
     <nav class="menu">
       <ul>
-        <li><a href="http://smarturl.it/Chromatica">Pre-Order</a></li>
-        <li><a href="https://www.twitter.com/bruubaldo/">My Twitter</a></li>
-        <li><a href="https://www.instagram.com/brunoubaldoo/">My Instagram</a></li>
+        <li><a href="#sobre">About</a></li>
+        <li><a href="#portfolio">𝕮𝖍𝖗𝖔𝖒𝖆𝖙𝖎𝖈𝖆 Era</a></li>
+        <li><a href="#contato">Social Medias</a></li>
 
       </ul>
     </nav>
-    <div> 
+    <div class="titulo">
       <h1 class="site-title">𝕮𝖍𝖗𝖔𝖒𝖆𝖙𝖎𝖈𝖆</h1>
       <h2 class="site-title">𝕿𝖍𝖊 𝖓𝖊𝖜 𝖆𝖑𝖇𝖚𝖒 𝖋𝖗𝖔𝖒 𝕸𝖆𝖒𝖆 𝕸𝖔𝖓𝖘𝖙𝖊𝖗</h2>
       <h3 class="site-subtitle">𝕰𝖓𝖏𝖔𝖞 𝖚𝖘</h3>
@@ -28,17 +29,17 @@
     </div>
     
   </header>
-  <section class="portfolio">
+  <section class="portfolio" id="portfolio">
     <h2>𝕮𝖍𝖗𝖔𝖒𝖆𝖙𝖎𝖈𝖆 ERA</h2>
 
     <div class="grid">
     <figure>
       <img class="img-portfolio" src="./img/simb.png" alt="Welcome to 𝕮𝖍𝖗𝖔𝖒𝖆𝖙𝖎𝖈𝖆 ">
-      <figcaption>Welcome to 𝕮𝖍𝖗𝖔𝖒𝖆𝖙𝖎𝖈𝖆</figcaption>
+      <figcaption>WELCOME TO 𝕮𝖍𝖗𝖔𝖒𝖆𝖙𝖎𝖈𝖆</figcaption>
     </figure>
     <figure>
       <img class="img-portfolio" src="./img/data.png" alt=">REALEASE">
-      <figcaption>REALEASE</figcaption>
+      <figcaption>COMING IN</figcaption>
     </figure>
     <figure>
       <img class="img-portfolio" src="./img/TRACKLIST.png" alt="TRACKLIST">
@@ -46,38 +47,56 @@
     </figure>
   </div>
   </section>
-  <center><div style="color:#ff009d; font-size: 30px; font-weight: normal" id="dday"></div></center>
+ <section class="contato" id="contato">
+  <h2>Social Medias</h2>
+	<div class="grid icons">
+    <a target="_blank" href="https://github.com/brunoubaldo">
+      <i class="fab fa-github"></i>
+    </a>
+    <a target="_blank" href="https://twitter.com/bruubaldo">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a target="_blank" href="https://instagram.com/brunoubaldoo">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="mailto:bruno.ubaldo2004@gmail.com.br">
+      <i class="fas fa-envelope-square"></i>
+    </a>
+  </div>
+ </section>
+ <center><div  class="countdown"style="color:#ff636c; font-size: 4em; font-weight: normal" id="dday"></div></center>
 
-<script>
-// Set the date we're counting down to
-var countDownDate = new Date("May 30, 2020 00:00:00").getTime();
 
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-  // Get todays date and time
-  var now = new Date().getTime();
-
-  // Find the distance between now an the count down date
-  var distance = countDownDate - now;
-
-  // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-  // Display the result in the element with id="demo"
-  document.getElementById("dday").innerHTML = days + "𝕯𝖎𝖆𝖘 " + hours + "𝖍𝖔𝖗𝖆𝖘 "
-  + minutes + "𝖒𝖎𝖓 " + seconds + "𝖘 ";
-
-  // If the count down is finished, write some text 
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("dday").innerHTML = "SITE NA TEIA";
-  }
-}, 1000);
-</script>
+ <script>
+ // Set the date we're counting down to
+ var countDownDate = new Date("May 30, 2020 00:00:00").getTime();
+ 
+ // Update the count down every 1 second
+ var x = setInterval(function() {
+ 
+   // Get todays date and time
+   var now = new Date().getTime();
+ 
+   // Find the distance between now an the count down date
+   var distance = countDownDate - now;
+ 
+   // Time calculations for days, hours, minutes and seconds
+   var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+   var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+ 
+   // Display the result in the element with id="demo"
+   document.getElementById("dday").innerHTML = days + "𝕯𝖎𝖆𝖘 " + hours + "𝖍𝖔𝖗𝖆𝖘 "
+   + minutes + "𝖒𝖎𝖓 " + seconds + "𝖘 ";
+ 
+   // If the count down is finished, write some text 
+   if (distance < 0) {
+     clearInterval(x);
+     document.getElementById("dday").innerHTML = "SITE NA TEIA";
+   }
+ }, 1000);
+ </script>
 </body>
 
 </html>
